# game-hamster

./: README.md  build.bat  main.py  pyproject.toml
app/: __init__.py
app/bases/: config.py  models.py  utils.py
app/main_window/: task.py  ui.py  view.py  view.ui
demo/: auto.py
demo/模拟-只狼/: test4.tar
