[tool.poetry]
name = "game-hamster"
version = "0.1.0"
description = ""
authors = ["gupingan <g332920287@foxmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
pyside2 = "^5.15.2.1"
pyinstaller = "5.1"

[[tool.poetry.source]]
name = "tencent-pypi"
url = "http://mirrors.cloud.tencent.com/pypi/simple/"
priority = 'default'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
